# lab03sukhov

./: CMakeLists.txt
include/: array.h  figure.h  pentagon.h  rhombus.h  trapezoid.h
src/: array.cpp  main.cpp  pentagon.cpp  rhombus.cpp  trapezoid.cpp
tests/: test.cpp
